--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="./css/output.css" rel="stylesheet">
 </head>
 <body>
-    <div class="bg-red-700 text-4xl">hello</div>
-</body>
+    <div class="flex flex-row">
+        <div class="first bg-red-400 w-full">AB</div>
+        <div class="second bg-green-600 w-full text-white">B</div>
+        <div class="third bg-blue-500 w-full">C</div>
+    </div> 
+</body> 
 </html>
