--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <div class="font-bold">Scott Jenning</div>
                     <div class="text-[#585e68] text-sm">46.9k  posts </div>
                 </div>
+                <div class="text-base cursor-pointer text-blue-500  mt-1 py-3 pl-4 hover:bg-[#181818]">Show more</div>
             </div>
 
             <div class="who  my-3 ml-7 border rounded-2xl border-[#202327] py-3">
@@ -116,10 +117,11 @@
                         <div class="handle text-[#585e68] text-sm">@Microsoft</div>
                     </div>
                     <div class="button">
-                        <input type="button" value="Following" class="bg-black cursor-pointer mr-3 py-1 px-3 text-white border outline-1 border-white rounded-full text-sm font-bold hover:bg-red-950" >
+                        <input type="button" value="Following" class="bg-black cursor-pointer mr-3 py-1 px-3 text-white border outline-1 border-white rounded-full text-sm font-bold hover:text-red-600 hover:border-red-600 hover:bg-red-950" >
                         
                     </div>
                 </div>
+                <div class="text-base cursor-pointer text-blue-500  mt-1 py-3 pl-4 hover:bg-[#181818]">Show more</div>
             </div>
         </div>
     </div>
