Sidebar Sticky prop. added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="bg-black text-white">
     <div class="container flex mx-auto ">
-        <div class="first md:w-[24%] lg:w-[21%] flex flex-col gap-4 h-full  top-0">
+        <div class="first md:w-[24%] lg:w-[21%] flex flex-col gap-4 h-full sticky top-0">
             <div class="logo hover:bg-[#181818] cursor-pointer w-14 py-3  px-2 rounded-full ">
                 <svg viewBox="0 0 24 24" aria-hidden="true"
                     class="w-8 invert r-4qtqp9 r-yyyyoo r-dnmrzs r-bnwqim r-lrvibr r-m6rgpd r-lrsllp r-1nao33i r-16y2uox r-8kz0gk ">
@@ -238,7 +238,7 @@
 
         </div>
         <div class="third w-[32%] hidden sm:block">
-            <div class="search m-3">
+            <div class="search m-3 ">
                 <input type="search"
                     class="w-full bg-[#202327] text-white placeholder-[#757575] rounded-full ml-4 px-4 py-2 focus:outline-[#1D9BF0] focus:outline"
                     name="search" placeholder="Search">
@@ -268,7 +268,7 @@
                 <div class="text-base cursor-pointer text-blue-500  mt-1 py-3 pl-4 hover:bg-[#181818]">Show more</div>
             </div>
 
-            <div class="who  my-3 ml-7 border rounded-2xl border-[#202327] py-3">
+            <div class="who  my-3 ml-7 border rounded-2xl border-[#202327] py-3 sticky top-0">
                 <h1 class="text-xl font-bold pl-4">Who to follow</h1>
                 <div class="account flex justify-between items-center mt-3 py-1 pl-4 hover:bg-[#181818]">
                     <div class="text hover:cursor-pointer">
