--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             </div>
         </div>
         <div class="second w-full md:w-[47%] sm:w-[60%] border border-x-[#202327] border-y-black">
-            <div class="top flex relative text-base font-semibold ">
+            <div class="top flex  text-base font-semibold sticky top-0 border-b-[#202327] border-b backdrop-blur-lg">
                 <div class="line bg-blue-500 w-14 absolute z-10 left-[7.6rem] bottom-0 h-1 rounded-full "></div>
-                <div class="for-you text-white w-1/2 flex justify-center p-4 hover:bg-[#181818] cursor-pointer ">For you
+                <div class="for-you text-white w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer ">For you
                 </div>
-                <div class="flolowing text-[#6a6b6d]  w-1/2 flex justify-center p-4 hover:bg-[#181818] cursor-pointer">
+                <div class="flolowing text-[#6a6b6d]  w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer">
                     Following</div>
             </div>
-            <div class="hr w-full bg-[#202327] h-[1px]"></div>
+            <!-- <div class="hr w-full bg-[#202327] h-[1px]"></div> -->
             <div class="happen flex p-4 gap-4">
                 <div class="img"><img alt="Abdullah Shamoon" draggable="true"
                         src="https://pbs.twimg.com/profile_images/1591762126141788161/CSgZFaib_normal.jpg"
