Added Account section on sidebar

--- a/index.html
+++ b/index.html
@@ -28,39 +28,63 @@
                 <ul class="flex flex-col gap-3 text-xl  md:items-stretch items-end">
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full ">
-                        <span class="material-symbols-outlined text-3xl">home</span><span class="hidden md:block">Home</span>
+                        <span class="material-symbols-outlined text-3xl">home</span><span
+                            class="hidden md:block">Home</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">search</span><span class="hidden md:block">Explore</span>
+                        <span class="material-symbols-outlined text-3xl">search</span><span
+                            class="hidden md:block">Explore</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">notifications</span><span class="hidden md:block">Notification</span>
+                        <span class="material-symbols-outlined text-3xl">notifications</span><span
+                            class="hidden md:block">Notification</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">mail</span><span class="hidden md:block">Messages</span>
+                        <span class="material-symbols-outlined text-3xl">mail</span><span
+                            class="hidden md:block">Messages</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">indeterminate_check_box</span><span class="hidden md:block">Grok</span>
+                        <span class="material-symbols-outlined text-3xl">indeterminate_check_box</span><span
+                            class="hidden md:block">Grok</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">groups</span><span class="hidden md:block">Communities</span>
+                        <span class="material-symbols-outlined text-3xl">groups</span><span
+                            class="hidden md:block">Communities</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">person</span><span class="hidden md:block">Profile</span>
+                        <span class="material-symbols-outlined text-3xl">person</span><span
+                            class="hidden md:block">Profile</span>
                     </li>
                     <li
                         class="flex gap-3 items-center w-fit pr-4 md:pr-6 md:pl-2 py-1 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full">
-                        <span class="material-symbols-outlined text-3xl">more_horiz</span><span class="hidden md:block">More</span>
+                        <span class="material-symbols-outlined text-3xl">more_horiz</span><span
+                            class="hidden md:block">More</span>
                     </li>
                     <li
-                        class="flex gap-3 items-center w-10/12 pr-4 md:pr-6 md:pl-2 py-2 bg-blue-500 hover:bg-blue-600 hover:cursor-pointer rounded-full justify-center font-semibold ">
-                        Post
+                        class="flex gap-3 items-center w-10/12 pr-1 md:pr-6 md:pl-2 py-2 bg-blue-500 hover:bg-blue-600 hover:cursor-pointer rounded-full justify-center font-semibold ">
+                        <span class="hidden md:block">Post</span>
+                        <span class="material-symbols-outlined block md:hidden">send</span>
+                    </li>
+                    <li
+                        class="flex justify-between items-center w-11/12 hover:bg-[#181818] hover:cursor-pointer hover:rounded-full p-2">
+                        <div class="img">
+                            <img alt="Abdullah Shamoon" draggable="true"
+                                src="https://pbs.twimg.com/profile_images/1591762126141788161/CSgZFaib_normal.jpg"
+                                class="rounded-full w-10">
+                        </div>
+                        <div class="name text-sm hidden md:block">
+                            <div class="up font-semibold text-center">Abdullah Shamoon</div>
+                            <div class="down text-[#747475] hidden xl:block">@Shamoon_12</div>
+                        </div>
+                        <div class="icon hidden md:block">
+                            <span class="material-symbols-outlined text-xl">more_horiz</span>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -68,9 +92,11 @@
         <div class="second w-full md:w-[47%] sm:w-[60%] border border-x-[#202327] border-y-black">
             <div class="top flex  text-base font-semibold sticky top-0 border-b-[#202327] border-b backdrop-blur-lg">
                 <div class="line bg-blue-500 w-14 absolute z-10 left-[7.6rem] bottom-0 h-1 rounded-full "></div>
-                <div class="for-you text-white w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer ">For you
+                <div class="for-you text-white w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer ">For
+                    you
                 </div>
-                <div class="flolowing text-[#6a6b6d]  w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer">
+                <div
+                    class="flolowing text-[#6a6b6d]  w-1/2 flex justify-center p-4 hover:bg-[#1818187e] cursor-pointer">
                     Following</div>
             </div>
             <!-- <div class="hr w-full bg-[#202327] h-[1px]"></div> -->
@@ -306,9 +332,9 @@
                 <div class="text-base cursor-pointer text-blue-500  mt-1 py-3 pl-4 hover:bg-[#181818]">Show more</div>
             </div>
         </div>
-        
+
     </div>
-    
+
 </body>
 
 </html>
