--- a/index.html
+++ b/index.html
@@ -259,6 +259,64 @@
                     </div>
                 </div>
                 <div class="hr w-full bg-[#202327] h-[1px] "></div>
+                <div class="post flex hover:bg-[#18181871] cursor-pointer">
+                    <div class="image p-4">
+                        <img alt="" draggable="true"
+                            src="https://pbs.twimg.com/profile_images/1829258605922824192/OEz_eLKG_normal.jpg"
+                            class="rounded-full w-11">
+                    </div>
+                    <div class="content">
+                        <div class="user mt-3 flex justify-between">
+                            <div class="">
+                                <span class="font-bold hover:underline">Vipin Tiwari</span>
+                                <span class="text-[#6a6b6d] pl-2">@Vipintiwari952 · 23h</span>
+                            </div>
+                            <div class="">
+                                <span
+                                    class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
+                            </div>
+                        </div>
+                        <div class="data w-[96%]">
+                            Here are some highlights from Glenn Maxwell’s book The Showman, showcasing how poorly he was
+                            treated at Punjab Kings by Sehwag, followed by Virat Kohli’s invitation to join RCB:
+                            <br><br> Thread 🧵
+                        </div>
+                        <div class="w-[96%]">
+                            <img class="rounded-2xl"
+                                src="https://pbs.twimg.com/media/Gau72CoaAAMj-c8?format=jpg&name=small" alt="">
+                        </div>
+                        <div class="icons flex justify-between w-[96%] text-[#6a6b6d] my-2">
+                            <div class="icon flex gap-1 items-center hover:text-[#1d9bf0]">
+                                <span
+                                    class="material-symbols-outlined text-lg hover:bg-[#2a4f682c] rounded-full px-2 p-1">forum</span>
+                                <div class="txt text-xs font-semibold">3.9K</div>
+                            </div>
+                            <div class="icon flex gap-1 items-center hover:text-[#43ad51]">
+                                <span
+                                    class="material-symbols-outlined text-lg hover:bg-[#2a683f2c] rounded-full px-2 p-1">forward_circle</span>
+                                <div class="txt text-xs font-semibold">75K</div>
+                            </div>
+                            <div class="icon flex gap-1 items-center hover:text-[#f01d6e]">
+                                <span
+                                    class="material-symbols-outlined text-lg hover:bg-[#682a3f2c] rounded-full px-2 p-1">favorite</span>
+                                <div class="txt text-xs font-semibold">94K</div>
+                            </div>
+                            <div class="icon flex gap-1 items-center hover:text-[#1d9bf0]">
+                                <span
+                                    class="material-symbols-outlined text-lg hover:bg-[#2a4f682c] rounded-full px-2 p-1">planner_review</span>
+                                <div class="txt text-xs font-semibold">28M</div>
+                            </div>
+                            <div class="icon flex gap-1 items-center ">
+                                <span
+                                    class="material-symbols-outlined text-xl hover:text-[#1d9bf0] hover:bg-[#2a4f682c] rounded-full px-2 p-1">bookmark_add</span>
+                                <span
+                                    class="material-symbols-outlined text-xl hover:text-[#1d9bf0] hover:bg-[#2a4f682c] rounded-full px-2 p-1">upload</span>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="hr w-full bg-[#202327] h-[1px] "></div>
 
             </div>
 
@@ -282,8 +340,8 @@
 
                 <div class="offseason mt-3 py-1 pl-4 hover:bg-[#181818] hover:cursor-pointer flex gap-3">
                     <div class="image"><img
-                            src="https://pbs.twimg.com/semantic_core_img/1847298013816852480/U35VIwO8?format=jpg&name=120x120" class="rounded-2xl h-20 w-20 object-cover"
-                            alt=""></div>
+                            src="https://pbs.twimg.com/semantic_core_img/1847298013816852480/U35VIwO8?format=jpg&name=120x120"
+                            class="rounded-2xl h-20 w-20 object-cover" alt=""></div>
                     <div class="Text">
                         <div class="head font-semibold ">The Offseason</div>
                         <div class="tail text-[#747c8a] text-sm">Event . LIVE</div>
@@ -291,14 +349,14 @@
                 </div>
 
                 <div class="item mt-3 py-1 pl-4 hover:bg-[#181818] hover:cursor-pointer ">
-                    <div class="mixed flex justify-between items-center"> 
+                    <div class="mixed flex justify-between items-center">
                         <div class="ttxt">
                             <div class="text-[#585e68] text-sm">Trending in India</div>
                             <div class="font-bold">#JioHotstar</div>
                         </div>
                         <div class="icn">
                             <span
-                                    class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
+                                class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
                         </div>
                     </div>
                     <div class="text-[#585e68] text-sm">21.7k posts </div>
@@ -311,7 +369,7 @@
                         </div>
                         <div class="icn">
                             <span
-                                    class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
+                                class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
                         </div>
                     </div>
                     <div class="text-[#585e68] text-sm">98.7K posts</div>
@@ -324,9 +382,9 @@
                         </div>
                         <div class="icn">
                             <span
-                                    class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
+                                class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
                         </div>
-                    </div>                
+                    </div>
                     <div class="text-[#585e68] text-sm">Trending with #stockmarketcrash</div>
                 </div>
                 <div class="item mt-3 py-1 pl-4 hover:bg-[#181818] hover:cursor-pointer ">
@@ -337,9 +395,9 @@
                         </div>
                         <div class="icn">
                             <span
-                                    class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
+                                class="material-symbols-outlined text-xl text-[#6e6e6e] hover:bg-[#3b72973d] hover:text-blue-500 rounded-full px-1 mr-2">more_horiz</span>
                         </div>
-                    </div> 
+                    </div>
                     <div class="text-[#585e68] text-sm">46.9k posts </div>
                 </div>
                 <div class="text-base cursor-pointer text-blue-500  mt-1 py-3 pl-4 hover:bg-[#181818]">Show more</div>
